--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,9 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/CNAME",
+              "src/google7a28cfc24045660c.html"
             ],
             "styles": [
               "src/styles.css",
